------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Tue Jul 06 19:17 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added byteorder functions for romfs.

Tue Jul 06 14:23 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* More changes to the rd driver by Blaz Antonic.

Mon Jul 05 14:11 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Sanitisation and enhancement of the rd driver by Blaz Antonic.

Thu Jun 24 14:11 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Bug fix to bioscon driver.

Tue Jun 15 10:40 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Latest changes to (ALPHA) meta driver.

Tue Jun 15 10:31 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Minor tweaks to Makefile

Sun May 30 00:05 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixes code to allow loading of shared libraries.

Sun May 30 00:05 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Modified tty interface to simplify it.

	* Added support for non-blocking IO on ttys.

	* Included support for graphics on direct console driver.

	* Updated serial termios support to allow baud rate to be changed.

	* Added support for ^C and ^Z to generate signals from the console.

	* Minor tweaks to select code.

	* Added socket to syscall table.

Sun May 30 00:01 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated todo file.

Fri May 28 20:04 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated bugs file.

Thu May 20 12:04 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final tweaks for 0.0.76

Mon May 17 12:29 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added Documentation/cs_write which describes code that
	  writes to the kernel code segment.
