@@ -4,6 +4,11 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Wed Jul 07 19:17 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Updated build system to make it more arch independant. Makefile
+	  contributed by Simon Wood.
+
 Tue Jul 06 19:17 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Added byteorder functions for romfs.
